Avatar not showing up temp fix

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -455,4 +455,8 @@ footer .ms-Label {
   .ms-Image-image {
     opacity: 1;
   }
+
+  .ms-Persona-imageArea .ms-Image {
+    background-color: #bbbbbb;
+  }
 }
